Add link to jackdunn.org

--- a/cv.html
+++ b/cv.html
@@ -112,7 +112,7 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
 <h3 id="private-tuition-200814">Private Tuition (2008–14)</h3>
 <ul>
 <li>Responsibility for planning and implementing a tuition programme for individual students within the community, primarily in Mathematics, Chemistry and Physics.</li>
-<li>Testimonials available at www.jackdunn.org.</li>
+<li>Testimonials available at <a href="www.jackdunn.org">www.jackdunn.org</a>.</li>
 </ul>
 <h3 id="flying-note-english-tutor-201213">Flying Note — English Tutor (2012–13)</h3>
 <ul>
