--- a/cv.html
+++ b/cv.html
@@ -56,7 +56,7 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
 <p><em>Bachelor of Engineering in Engineering Science (First Class Honours)</em> - GPA of 9.000 (A+ in every paper taken)</p>
 <p>Honours and awards:</p>
 <ul>
-<li>2013: Senior Scholar Award, Engineering Science — Graduated top of class</li>
+<li>2013: Senior Scholar Award, Engineering Science — Top of graduating Engineering class</li>
 <li>2013: Operations Research Society of NZ Young Practitioner’s Prize — Joint First Undergraduate</li>
 <li>2011–13: First in Paper Awards - Achieved highest score in 19 out of 23 papers taken</li>
 <li>2010–13: Dean’s Honours List - Top 5% of Engineering cohort</li>
